# model-training

./: .coverage  .gitignore  .mllint.yml  Makefile  README.md  SA_model.py  c1_BoW_Sentiment_Model.pkl  dvc.yaml  pyproject.toml  requirements.txt  setup.py  text_preprocessing.py
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml  create-model.yaml  create-release.yaml  update-coverage-readme.yaml
config/: mypy.ini  pylintrc
data/processed/: .gitignore  restaurant_reviews.csv
docs/: conf.py
models/: .gitignore  accuracy.json  c2_Classifier_Sentiment_Model  metrics.json  naive_bayes_classifier.pkl
src/: __init__.py
src/data/: download_data.py  make_dataset.py
src/models/: train_model.py
src/tests/: test_features.py  test_infrastructure.py  test_model_capabilities.py  test_monitoring.py  test_mutamorphic.py  test_robustness.py
src/tests/coverage/: coverage.xml  pytest-coverage.txt  pytest.xml
