[tool.poetry]
name = "model-training"
version = "0.0.15"
description = ""
authors = ["Luca Cras <luca_cras@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.24.3"
pandas = "2.0.1"
nltk = "3.8.1"
scipy = "1.10.1"
matplotlib = "3.7.1"
scikit-learn = "1.2.2"
joblib = "1.2.0"
lib2 = "1.0.0"
click = "^8.1.3"
urllib3 = "1.26.16"

[tool.poetry.group.dev.dependencies]
python-dotenv = ">=0.5.1"
pytest = "^7.3.2"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
mypy = "1.3.0"
flake8 = "4.0.0"
pylint = "2.11.1"
dslinter = "1.1.0"
mllint = "0.12.2"
dvc = "2.58.1"
dvc-gdrive = "2.19.2"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
